<resources>
    <string name="app_name">GeoNote</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="view">VIEW</string>
    <string name="add">ADD</string>
    <string name="near">Near: %1$s</string>
    <string name="nearby_messages">Messages Near You</string>
    <string name="view_nearby_messages">View Nearby Messages</string>
    <string name="compose_message">Compose Message</string>
    <string name="about">About</string>
    <string name="username">Welcome %1$s</string>
    <string name="add_text">Add Your Message!</string>
    <string name="title">Title</string>
    <string name="write_your_post">Write your post...</string>
    <string name="date_format">HH:mm yyyy/MM/dd</string>
    <string name="Complete">Complete</string>
    <string name="Error">Error</string>
    <string name="user">User: %1$s</string>
    <string name="post_title">Title: %1$s</string>
    <string name="written">Written: %1$s</string>
    <string name="DefaultPassword">123456</string>
    <string name="default_login">willc417@gmail.com</string>
</resources>
