<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    style="@style/CardView.Dark"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAuthor"
            android:text="@string/user"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/post_title"
            android:layout_below="@id/tvAuthor"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:layout_below="@id/tvBody"
            android:text="@string/near"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:layout_below="@id/address"
            android:text="@string/written"
            />

        <at.markushi.ui.CircleButton
            android:id="@+id/btnDelete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cb_color="@color/colorAccent"
            app:cb_pressedRingWidth="10dip"
            android:text="@string/delete" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/date"
            android:layout_width="100dp"
            android:layout_height="100dp" />

</RelativeLayout></android.support.v7.widget.CardView>
